--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
 
 <body>
   <!-- navbar -->
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+     <img src="https://eazybi.com/static/img/integrations_page/icons/rest.png" class="mx-auto d-block" alt="rest-api logo"/>
+    </nav>
 
   <!-- your github fellow -->
-
+   <div id="github-follower-list" class="container mt-3">
+    <h1 class="text-center">My Github Fellow</h1>
+    <!--your fetched data-->
+    <div id="github-follower" class="card-deck justify-content-center"></div>
+   </div>
 
 
   <!-- Optional JavaScript -->
-  
+  <script src="./app.js"></script>
 
   
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
