--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-     <img src="https://eazybi.com/static/img/integrations_page/icons/rest.png" class="mx-auto d-block" alt="rest-api logo"/>
+     <img src="https://eazybi.com/static/img/integrations_page/icons/rest.png" class="mx-auto d-block" alt="rest-api logo">
     </nav>
 
   <!-- your github fellow -->
